Closed
Bug 793587
Opened 13 years ago
Closed 13 years ago
ASSERTION: "No frame for list item" in HTMLListBulletAccessible::Name
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
mozilla18
People
(Reporter: surkov, Assigned: surkov)
Details
Attachments
(1 file)
|
1.34 KB,
patch
|
tbsaunde
:
review+
|
Details | Diff | Splinter Review |
when list item gets hidden, we fire hide event and DOMi handles it and get an accessible name, at this point there's no frame for list item and thus HTMLListBulletAccessible::Name asserts.
Attachment #663918 -
Flags: review?(trev.saunders)
Updated•13 years ago
|
Attachment #663918 -
Flags: review?(trev.saunders) → review+
| Assignee | ||
Comment 1•13 years ago
|
||
| Assignee | ||
Updated•13 years ago
|
Target Milestone: --- → mozilla18
Comment 2•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•