Bug 793587 - ASSERTION: 'No frame for list item' in HTMLListBulletAccessible::Name, r=tbsaunde